# personal_portfolio_ai-project

./: .gitignore  .vercelignore  README.md  kill-dev-servers.py  mise.toml  next.config.js  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.ts  vercel.json
.claude/: settings.local.json
api/: index.py
app/: globals.css  layout.tsx
app/(marketing)/: HomePageContent.tsx  layout.tsx  loading.tsx  page.tsx
app/(marketing)/_components/: ContactSection.tsx  (+4 more)
app/chat/: layout.tsx  loading.tsx
app/test-api/: page.tsx
components/chat/: chat.tsx  markdown.tsx  message.tsx  multimodal-input.tsx  overview.tsx
components/ui/: custom-cursor.tsx  markdown-renderer.tsx
data/: achievement-stats.ts  suggested-actions.json
docs/decisions/: vercel-active-cpu-billing.md  vercel-framework-detection.md  vercel-pnpm-package-manager.md  vercel-python-uv-requirements.md
docs/dev-guide/: 01-overview.md  02-backend-walkthrough.md  03-frontend-walkthrough.md  04-faq.md
hooks/: use-scroll-to-bottom.tsx
learn_personal_portfolio_ai/: ai_sdk_adapter.py  boto_ses.py  config.py  multi_round_bedrock_runtime_chat_manager.py  paths.py  runtime.py  source_code.py  utils.py
learn_personal_portfolio_ai/prompts/: instruction.md  knowledge-base.md
lib/: constants.ts  utils.ts
lib/seo/: config.ts  generateMetadata.ts
scripts/: test_ai_aws_bedrock.py  test_ai_aws_bedrock_with_cached_prompt.py  test_ai_glm.py  test_ai_google_gemini.py  test_source_code.py
tests_node/: math.test.js
tests_python/: test_config.py  test_source_code.py
types/: index.ts
(+7 files in other folders)
